workflow-automation-backend/k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: workflow-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: workflow-automation-backend-api-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: workflow-automation
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8085
      targetPort: 8085
      nodePort: 30085
  type: NodePort
