workflow-automation-backend/k8s/workflow-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-service
  namespace: workflow-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workflow-service
  template:
    metadata:
      labels:
        app: workflow-service
    spec:
      containers:
        - name: workflow-service
          image: workflow-automation-backend-workflow-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: workflow-service
  namespace: workflow-automation
spec:
  selector:
    app: workflow-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
