workflow-automation-backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workflow-ingress
  namespace: workflow-automation
spec:
  rules:
    - host: workflow.local
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8085
          - path: /api/workflows
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8085
          - path: /api/executions
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8085
